# verifiable-agent-service

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: Registry.sol
contracts/src/interfaces/: IAutomataDcapAttestation.sol
contracts/src/libraries/: AttestationHelper.sol
contracts/src/types/: TDXStructs.sol
contracts/test/: AttestationHelper.t.sol  QuoteFork.t.sol  Registry.t.sol
contracts/test/mocks/: MockAutomataDcapAttestation.sol
docs/: DEPLOYMENT.md  PROTOCOL.md  architecture.md  openapi.yaml
docs/hyperliquid/: README.md  nonces-and-api-wallets.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/Common/: Button.jsx  Card.jsx  CopyButton.jsx
frontend/src/components/Dashboard/: AgentStatus.jsx
frontend/src/components/Layout/: Header.jsx  Layout.jsx
frontend/src/components/Registration/: ApproveAgent.jsx  RegisterAgent.jsx  VerifyOnChain.jsx
frontend/src/components/Trading/: OrderForm.jsx  TradingInterface.jsx
frontend/src/services/: api.js  contracts.js
frontend/src/stores/: appStore.js
frontend/src/utils/: constants.js
tdx-server/: Cargo.toml  README.md
tdx-server/src/: agent.rs  agents.rs  auth.rs  config.rs  main.rs  preset_tdx.rs  proxy.rs  signing.rs  siwe_auth.rs  types.rs  universal_signing.rs
tests/: .env.example  README.md  conftest.py  requirements.txt  test_agent.py  test_agent_approval.py  test_agent_integration.py  test_agents_api.py  test_auth.py  test_complete_user_flow.py  test_e2e.py  test_exchange_equivalence.py  test_exchange_signing.py  test_proxy.py  test_response_debug.py  test_signing.py
