[package]
name = "tdx-agent-server"
version = "0.1.0"
edition = "2021"
description = "TEE-secured Hyperliquid agent wallet server running in Intel TDX"
license = "MIT"

[dependencies]
# Web framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Cryptography
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand-std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Hyperliquid Rust SDK (latest master with alloy support)
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk", rev = "5aca1a08237f3c1d720b42d75bec40181b250e78" }
ethers = "2.0"
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types", 
  "signer-local",
] }

# SIWE authentication
siwe = "0.6"
chrono = "0.4"

# Keccak for proper Ethereum address derivation
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Environment and configuration
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Intel TDX attestation (temporarily disabled for basic proxy testing)
# dcap-qvl = { git = "https://github.com/automata-network/tdx-attestation-sdk", branch = "main" }
# tdx-attest = { git = "https://github.com/automata-network/tdx-attestation-sdk", branch = "main" }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }

# Database (optional - for persistent state)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

[features]
default = []
database = ["sqlx"]

[[bin]]
name = "server"
path = "src/main.rs"
